syntax = "proto3";
package zetachain.zetacore.pkg.chains;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/pkg/chains";

enum ReceiveStatus {
  option (gogoproto.goproto_enum_stringer) = true;
  Created = 0; // some observer sees inbound tx
  Success = 1;
  Failed = 2;
}

enum ChainName {
  option (gogoproto.goproto_enum_stringer) = true;
  empty = 0;

  eth_mainnet = 1;
  zeta_mainnet = 2;
  btc_mainnet = 3;
  polygon_mainnet = 4;
  bsc_mainnet = 5;
  goerli_testnet = 6;
  mumbai_testnet = 7;
  ganache_testnet = 8;
  baobab_testnet = 9;
  bsc_testnet = 10;
  zeta_testnet = 11;
  btc_testnet = 12;
  sepolia_testnet = 13;
  goerli_localnet = 14;
  btc_regtest = 15;
  amoy_testnet = 16;
}

message Chain {
  ChainName chain_name = 1;
  int64 chain_id = 2;
}
